Added integration tests (the minimum set). Plus minor changes.